:confused: reinstating title-bar until can figure out how moving will work

--- a/styles/base.less
+++ b/styles/base.less
@@ -42,8 +42,8 @@ atom-pane {
   }
 }
 
-atom-workspace {
-  .title-bar {
-    display: none;
-  }
-}
+// atom-workspace {
+//   .title-bar {
+//     display: none;
+//   }
+// }
