--- a/styles/tree-view.less
+++ b/styles/tree-view.less
@@ -10,11 +10,11 @@
   border-right: 1px solid @base-border-color;
 }
 
-.tree-view-scroller {
-  .project-root-header {
-    margin-top: @tree-view-offset-top;
-  }
-}
+// .tree-view-scroller {
+//   .project-root-header {
+//     margin-top: @tree-view-offset-top;
+//   }
+// }
 
 .tree-view {
   color: @text-color;
