--- a/styles/ui-variables.less
+++ b/styles/ui-variables.less
@@ -14,6 +14,7 @@
 // Cribbed from gruvbox theme
 @syntax-red: #fb4934;
 @syntax-black: #282828;
+@syntax-white: #d5c4a1;
 @syntax-green: #b8bb26;
 @syntax-cyan: #83a598;
 
@@ -104,6 +105,10 @@
 
 // Tree view
 @tree-view-offset-top: 26px;
+
+// Tool-tips
+@tip-background-color: @syntax-green;
+@tip-text-color: @syntax-black;
 
 // Misc
 @component-border-radius: 2px;
