:lipstick: cleaning up tree-view status colors

--- a/styles/tree-view.less
+++ b/styles/tree-view.less
@@ -23,4 +23,8 @@
   .list-item.selected {
     color: @text-color-selected;
   }
+
+  .list-item:not(.status-modified) {
+    color: @text-color;
+  }
 }
