:lipstick: status-bar and line-number coloring

--- a/styles/status-bar.less
+++ b/styles/status-bar.less
@@ -11,4 +11,12 @@
   color: @text-color;
   border-top: 1px solid @base-border-color;
   background-color: @tree-view-background-color;
+
+  .git-view .git-branch {
+    color: @status-bar-git-branch-color;
+  }
+
+  .grammar-status a {
+    color: @status-bar-grammar-picker-color;
+  }
 }
