--- a/styles/editor.less
+++ b/styles/editor.less
@@ -18,3 +18,11 @@ atom-text-editor[mini] {
     background-color: @background-color-selected;
   }
 }
+
+atom-text-editor {
+  .gutter {
+    .line-number.cursor-line {
+      color: @base-ui-text-highlight;
+    }
+  }
+}
