--- a/styles/ui-variables.less
+++ b/styles/ui-variables.less
@@ -2,14 +2,6 @@
 // UI Variables
 // -------------------
 
-// These are the official UI variables that every UI theme should define.
-// It allows other packages to match your theme.
-
-// Overrides: atom/static/variables/ui-variables.less
-
-// Try to edit some of the values below to see your theme change.
-// A good start is to change the color of the `@base-background-color` variable.
-
 // gruvbox palette, from vim theme by Pavel Pertsev:
 // https://github.com/morhetz/gruvbox
 
@@ -22,7 +14,7 @@
 @ui-bg3: #665c54;
 @ui-bg4: #7c6f64;
 
-@ui-fg: @ui-fg1;
+@ui-fg: @ui-fg2;
 @ui-fg0: #fbf1c7;
 @ui-fg1: #ebdbb2;
 @ui-fg2: #d5c4a1;
@@ -48,34 +40,33 @@
 
 
 // Text Colors
-@text-color:           hsl(0,0%,66%);
-@text-color-subtle:    hsl(0,0%,50%);
-@text-color-highlight: hsl(0,0%,94%);
-@text-color-selected:  hsl(0,0%,100%);
+@text-color:           @ui-fg;
+@text-color-subtle:    @ui-fg3;
+@text-color-highlight: @ui-fg0;
+@text-color-selected:  @ui-fg2;
 
 @base-ui-text-highlight: @ui-orange;
 
 @text-status-modified: @ui-green;
 
-@text-color-info:    hsl(219,  79%, 66%);
-@text-color-success: hsl(140,  44%, 62%);
-@text-color-warning: hsl( 36,  60%, 72%);
-@text-color-error:   hsl(  9, 100%, 64%);
+@text-color-info:    @ui-blue-bright;
+@text-color-success: @ui-aqua-bright;
+@text-color-warning: @ui-yellow-bright;
+@text-color-error:   @ui-red-bright;
 
 // Background colors
-@background-color-info:    hsl(208, 100%, 50%);
-@background-color-success: hsl(160,  70%, 36%);
-@background-color-warning: hsl(32,   60%, 50%);
-@background-color-error:   hsl(0,    70%, 50%);
+@background-color-info:    @ui-blue;
+@background-color-success: @ui-aqua;
+@background-color-warning: @ui-orange;
+@background-color-error:   @ui-red;
 
-@background-color-highlight: lighten(@base-background-color, 5%);
-@background-color-selected:  lighten(@base-background-color, 10%);
+@background-color-highlight: @ui-bg1;
+@background-color-selected: @ui-bg1;
 @app-background-color: @base-background-color;
 
 // Base colors
-// @base-background-color: hsl(222,6%,22%);
 @base-background-color: @ui-bg;
-@base-border-color:     darken(@base-background-color, 8%);
+@base-border-color:     @ui-bg0_h;
 
 // Component colors
 @pane-item-background-color: @base-background-color;
@@ -87,35 +78,35 @@
 @tool-panel-background-color: @base-background-color;
 @tool-panel-border-color:     @base-border-color;
 
-@inset-panel-background-color: lighten(@base-background-color, 4%);
+@inset-panel-background-color: @ui-bg1;
 @inset-panel-border-color:     @base-border-color;
 
-@panel-heading-background-color: lighten(@base-background-color, 4%);
+@panel-heading-background-color: @ui-bg1;
 @panel-heading-border-color:     @base-border-color;
 
-@overlay-background-color: lighten(@base-background-color, 5%);
+@overlay-background-color: @ui-bg1;
 @overlay-border-color:     @base-border-color;
 
-@button-background-color:          lighten(@base-background-color, 10%);
-@button-background-color-hover:    lighten(@button-background-color, 12%);
+@button-background-color:          @ui-bg2;
+@button-background-color-hover:    @ui-bg3;
 @button-background-color-selected: @button-background-color-hover;
 @button-border-color:              @base-border-color;
 
 @tab-bar-background-color:    @base-background-color;
 @tab-bar-border-color:        @base-border-color;
 @tab-background-color:        @tab-bar-background-color;
-@tab-background-color-active: lighten(@tab-bar-background-color, 10%);
+@tab-background-color-active: @ui-bg1;
 @tab-border-color:            @base-border-color;
 
 @tree-view-background-color: @base-background-color;
 @tree-view-border-color:     @base-border-color;
 
 // Site colors
-@ui-site-color-1: hsl(208, 100%, 50%); // blue
-@ui-site-color-2: hsl(160,  70%, 42%); // green
-@ui-site-color-3: hsl(32,   60%, 50%); // orange
-@ui-site-color-4: #D831B0;             // pink
-@ui-site-color-5: #EBDD5B;             // yellow
+@ui-site-color-1: @ui-blue;
+@ui-site-color-2: @ui-aqua;
+@ui-site-color-3: @ui-orange;
+@ui-site-color-4: @ui-purple;
+@ui-site-color-5: @ui-yellow;
 
 // Sizes
 @font-size: 12px;
