--- a/styles/ui-variables.less
+++ b/styles/ui-variables.less
@@ -135,3 +135,8 @@
 // Misc
 @component-border-radius: 2px;
 @font-family: '.SFNSText-Regular', 'SF UI Text', 'Lucida Grande', 'Segoe UI', Ubuntu, Cantarell, sans-serif;
+
+@color-picker-body-bg: @ui-bg2;
+@color-picker-tab-bg: @ui-bg2;
+@color-picker-tab-bg-active: @ui-bg3;
+@color-picker-tab-text: @ui-fg2;
