:lipstick: style for overlays and panels

--- a/styles/lists.less
+++ b/styles/lists.less
@@ -53,6 +53,10 @@
     margin-top: @popover-list-padding;
     li {
       padding-left: @popover-list-padding;
+
+      &.selected {
+        background-color: @overlay-background-color-selected;
+      }
     }
   }
 }
