--- a/styles/ui-variables.less
+++ b/styles/ui-variables.less
@@ -75,7 +75,7 @@
 @input-background-color: @app-background-color;
 @input-border-color:     @base-border-color;
 
-@tool-panel-background-color: @base-background-color;
+@tool-panel-background-color: @ui-bg0_s;
 @tool-panel-border-color:     @base-border-color;
 
 @inset-panel-background-color: @ui-bg1;
@@ -85,6 +85,7 @@
 @panel-heading-border-color:     @base-border-color;
 
 @overlay-background-color: @ui-bg1;
+@overlay-background-color-selected: @ui-bg2;
 @overlay-border-color:     @base-border-color;
 
 @button-background-color:          @ui-bg2;
