:lipstick: tweaking select state on overlays

--- a/styles/panels.less
+++ b/styles/panels.less
@@ -24,4 +24,10 @@ atom-panel.modal {
   border: 1px solid @overlay-border-color;
   border-top: none;
   box-shadow: 0 2px 8px 1px hsla(0,0%,0%,.3);
+
+  .select-list {
+    .selected {
+      background-color: @overlay-background-color-selected;
+    }
+  }
 }
