:lipstick: settings panels need lighter bg

--- a/styles/panels.less
+++ b/styles/panels.less
@@ -31,3 +31,10 @@ atom-panel.modal {
     }
   }
 }
+
+// Settings View
+.settings-view {
+  &.pane-item {
+    background-color: @tool-panel-background-color;
+  }
+}
