:lipstick: touching up style on mini-editor inputs

--- a/styles/ui-variables.less
+++ b/styles/ui-variables.less
@@ -72,7 +72,7 @@
 @pane-item-background-color: @base-background-color;
 @pane-item-border-color:     @base-border-color;
 
-@input-background-color: @app-background-color;
+@input-background-color: @ui-bg1;
 @input-border-color:     @base-border-color;
 
 @tool-panel-background-color: @ui-bg0_s;
