:lipstick: futzing with gear-button in theme-selector

--- a/styles/panels.less
+++ b/styles/panels.less
@@ -37,4 +37,11 @@ atom-panel.modal {
   &.pane-item {
     background-color: @tool-panel-background-color;
   }
+
+  .themes-picker-item {
+    .btn.active-syntax-settings {
+      margin-top: 2px;
+      margin-left: 2px;
+    }
+  }
 }
