Remove white scrollbar corner.

--- a/styles/tree-view.less
+++ b/styles/tree-view.less
@@ -25,4 +25,8 @@
   .list-item:not(.status-modified) {
     color: @text-color;
   }
+
+	&::-webkit-scrollbar-corner {
+		background: @tree-view-background-color;
+	}
 }
